--- a/exercício.css
+++ b/exercício.css
@@ -1,1 +1,137 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body > header{
+    background-color: rgb(165, 6, 6);
+    padding: 16px 0;
+    color: rgb(4, 5, 5);
+}
+
+header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header li{
+    display: flex;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-left: 16px;
+}
+
+
+header li a{
+    color: rgb(4, 5, 5);
+    text-decoration: none;
+}
+
+.articles article a:hover{
+    text-decoration: underline;
+}
+
+.container{
+    width: 1366px;
+    margin: 0 auto;
+}
+
+.articles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.articles article img{
+    /*height: 180px;*/
+    width: 100%;
+}
+
+.articles article{
+    width: 30%;
+}
+
+
+section{
+    padding: 16px 0;
+}
+
+section h2,
+.articles article{
+    margin-bottom: 16px;
+}
+
+.articles article h3{
+margin-top: 8px;
+margin-bottom: 8px;
+}
+
+.articles article a{
+    background-color: rgb(5, 85, 85);
+    color: aliceblue;
+    padding: 8px;
+    display: inline-block;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 8px;
+}
+
+.articles article p,
+.articles article a {
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.articles article a:hover {
+    text-decoration: none;
+}
+
+.articles article a:hover{
+    text-decoration: underline;
+}
+
+.articles article h3 {
+    font-size: 24px;
+}
+
+Section h2 {
+    font-size: 32px;
+}
+
+#Games{
+    background-color:rgb(175, 21, 21)
+}
+
+#Games .articles article a{
+    background-color: rgb(68, 67, 67);
+}
+
+
+#Animes {
+    background-color: rgba(90, 5, 90, 0.1);
+}
+
+#Animes .articles article a{
+    background-color: rgb(78, 233, 6);
+}
+
+#Séries{
+    background-color:rgb(5, 107, 5)
+}
+
+#Séries .articles article a{
+    background-color: rgb(157, 250, 165);
+    color: black;
+}
+
+#Filmes{
+    background-color:rgb(5, 137, 177)
+}
+
+#Filmes .articles article a{
+    background-color: rgb(255, 253, 253);
+    color: black;
+}
+
+Página:
 http://127.0.0.1:5500/index.html
